deployment-mongo.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
spec:
  selector:
    run: mongodb-service
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      nodePort: 30017
  type: NodePort

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongodb-service
  labels:
    run: mongodb-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: mongodb-service
    spec:
      containers:
      - name: mongo
        image: library/mongo
        ports:
        - containerPort: 27017
          protocol: TCP
