deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service
  ports:
    - port: 3333
      protocol: TCP
      nodePort: 30333
      name: http
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: customer-service
        version: v1
    spec:
      containers:
      - name: customer-service
        image: customer-service:1.0
        ports:
        - containerPort: 3333
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
spec:
  selector:
    run: mongodb-service
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
      nodePort: 30017
  type: NodePort

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongodb-service
  labels:
    run: mongodb-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: mongodb-service
    spec:
      containers:
      - name: mongo
        image: library/mongo
        ports:
        - containerPort: 27017
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: account-service
  labels: 
    app: account-service
spec:
  selector:
    app: account-service
  ports:
  - port: 2222
    protocol: TCP
    nodePort: 30222
    name: http
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-service-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: account-service
        version: v1
    spec:
      containers:
      - name: account-service
        image: account-service:1.0
        ports:
        - containerPort: 2222
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-service-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: account-service
        version: v2
    spec:
      containers:
      - name: account-service
        image: account-service:1.0
        ports:
        - containerPort: 2222
          protocol: TCP
