account-service-destination-cb.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-service-destination
spec:
  host: account-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 45s
      maxEjectionPercent: 50
