account-virtual-service-delay-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service
spec:
  hosts:
  - account-service
  gateways:
  - mesh
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percent: 100
    match:
    - headers:
        x-version:
          exact: v2
    route:
    - destination:
        host: account-service
        subset: v2
  - route:
    - destination:
        host: account-service
        subset: v1
