account-virtual-service-timeout-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service
spec:
  hosts:
  - account-service
  gateways:
  - mesh
  http:
  - match:
    - headers:
        x-version:
          exact: v2
    route:
    - destination:
        host: account-service
        subset: v2
    timeout: 2s    
  - route:
    - destination:
        host: account-service
        subset: v1
    timeout: 2s
