customer-service-destination.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-service-destination
spec:
  host: customer-service
  subsets:
  - name: v1
    labels:
      version: v1
