gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers
spec:
  hosts:
  - "*"
  gateways:
  - sample-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customer-service
        port:
          number: 3333
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: accounts-gateway
spec:
  hosts:
  - "*"
  gateways:
  - sample-gateway
  http:
  - match:
    - uri:
        prefix: /account
    route:
    - destination:
        host: account-service
        subset: v2
        port:
          number: 2222
