header-traffic-routes-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service
spec:
  hosts:
  - account-service
  gateways:
  - mesh
  http:
  - match:
    - headers:
        x-version:
          exact: v1
    route:
    - destination:
        host: account-service
        subset: v1
      weight: 100  
  - route:
    - destination:
        host: account-service
        subset: v2
      weight: 100
