ingress-istio.yml
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /accounts/delay.*
        backend:
          serviceName: account-service
          servicePort: 2222
      - path: /accounts/fail.*
        backend:
          serviceName: account-service
          servicePort: 2222

      - path: /customers.*
        backend:
          serviceName: customer-service
          servicePort: 3333
